log
Thu 09 Mar 2023 04:10:11 PM UTC: 
 tests:  0|7
total_score: 0/70
10dfc22
Thu 09 Mar 2023 04:14:20 PM UTC: 
 exercises.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
85b93d5
Sat 11 Mar 2023 11:47:42 PM UTC: 
 exercises.c | 12 +++++++++++-
 1 file changed, 11 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘arrayMaxMin’:
exercises.c:31:12: error: invalid type argument of unary ‘*’ (have ‘int’)
   31 |         if(*a[k] < *min)
      |            ^~~~~
exercises.c:33:18: error: invalid type argument of unary ‘*’ (have ‘int’)
   33 |           *min = *a[k];
      |                  ^~~~~
exercises.c:35:12: error: invalid type argument of unary ‘*’ (have ‘int’)
   35 |         if(*a[k] > *max)
      |            ^~~~~
exercises.c:37:18: error: invalid type argument of unary ‘*’ (have ‘int’)
   37 |           *max = *a[k];
      |                  ^~~~~
Compilation failed
f27b0fc
Sat 11 Mar 2023 11:47:54 PM UTC: 
 exercises.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘arrayMaxMin’:
exercises.c:35:12: error: invalid type argument of unary ‘*’ (have ‘int’)
   35 |         if(*a[k] > *max)
      |            ^~~~~
Compilation failed
e1c7f04
Sat 11 Mar 2023 11:48:00 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
e8a28eb
Sat 11 Mar 2023 11:50:52 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
673926d
Sat 11 Mar 2023 11:52:50 PM UTC: 
 exercises.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  2|5
total_score: 20/70
459f42c
Sat 11 Mar 2023 11:56:35 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘crearPersona’:
exercises.c:62:4: error: ‘p’ is a pointer; did you mean to use ‘->’?
   62 |   p.edad = edad
      |    ^
      |    ->
exercises.c:62:16: error: expected ‘;’ before ‘return’
   62 |   p.edad = edad
      |                ^
      |                ;
   63 | 
   64 |    return p;
      |    ~~~~~~       
exercises.c:60:14: error: variable ‘p’ set but not used [-Werror=unused-but-set-variable]
   60 |    Persona * p = (Persona *) malloc(sizeof(Persona));
      |              ^
exercises.c:65:1: error: control reaches end of non-void function [-Werror=return-type]
   65 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
0a62a23
Sat 11 Mar 2023 11:57:07 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
7316166
Sat 11 Mar 2023 11:57:59 PM UTC: 
 exercises.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  2|5
total_score: 20/70
d36b63d
Sat 11 Mar 2023 11:58:29 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 20/70
fbccb35
Sat 11 Mar 2023 11:59:09 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  3|4
total_score: 30/70
e21621f
Sun 12 Mar 2023 12:01:44 AM UTC: 
 exercises.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:
exercises.c: In function ‘crearVector’:
exercises.c:83:32: error: too few arguments to function ‘calloc’
   83 |   Vector *vector = (Persona *) calloc(sizeof(Persona));
      |                                ^~~~~~
In file included from test.c:2:
/nix/store/iwd8ic5hhwdxn5dga0im55g5hjl270cd-glibc-2.33-47-dev/include/stdlib.h:542:14: note: declared here
  542 | extern void *calloc (size_t __nmemb, size_t __size)
      |              ^~~~~~
In file included from test.c:5:
exercises.c:83:11: error: unused variable ‘vector’ [-Werror=unused-variable]
   83 |   Vector *vector = (Persona *) calloc(sizeof(Persona));
      |           ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
e2577d5
Sun 12 Mar 2023 12:02:15 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘crearVector’:
exercises.c:83:39: error: expected expression before ‘int’
   83 |   Vector *vector = (Persona *) calloc(int n ,sizeof(Persona));
      |                                       ^~~
exercises.c:83:32: error: too few arguments to function ‘calloc’
   83 |   Vector *vector = (Persona *) calloc(int n ,sizeof(Persona));
      |                                ^~~~~~
In file included from test.c:2:
/nix/store/iwd8ic5hhwdxn5dga0im55g5hjl270cd-glibc-2.33-47-dev/include/stdlib.h:542:14: note: declared here
  542 | extern void *calloc (size_t __nmemb, size_t __size)
      |              ^~~~~~
In file included from test.c:5:
exercises.c:83:11: error: unused variable ‘vector’ [-Werror=unused-variable]
   83 |   Vector *vector = (Persona *) calloc(int n ,sizeof(Persona));
      |           ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
8f04999
Sun 12 Mar 2023 12:02:28 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘crearVector’:
exercises.c:83:39: error: expected expression before ‘size_t’
   83 |   Vector *vector = (Persona *) calloc(size_t n ,sizeof(Persona));
      |                                       ^~~~~~
exercises.c:83:32: error: too few arguments to function ‘calloc’
   83 |   Vector *vector = (Persona *) calloc(size_t n ,sizeof(Persona));
      |                                ^~~~~~
In file included from test.c:2:
/nix/store/iwd8ic5hhwdxn5dga0im55g5hjl270cd-glibc-2.33-47-dev/include/stdlib.h:542:14: note: declared here
  542 | extern void *calloc (size_t __nmemb, size_t __size)
      |              ^~~~~~
In file included from test.c:5:
exercises.c:83:11: error: unused variable ‘vector’ [-Werror=unused-variable]
   83 |   Vector *vector = (Persona *) calloc(size_t n ,sizeof(Persona));
      |           ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
02cd3b6
Sun 12 Mar 2023 12:03:14 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘crearVector’:
exercises.c:83:39: error: expected expression before ‘size_t’
   83 |   Vector *vector = (Persona *) calloc(size_t n ,sizeof(Persona)));
      |                                       ^~~~~~
exercises.c:83:32: error: too few arguments to function ‘calloc’
   83 |   Vector *vector = (Persona *) calloc(size_t n ,sizeof(Persona)));
      |                                ^~~~~~
In file included from test.c:2:
/nix/store/iwd8ic5hhwdxn5dga0im55g5hjl270cd-glibc-2.33-47-dev/include/stdlib.h:542:14: note: declared here
  542 | extern void *calloc (size_t __nmemb, size_t __size)
      |              ^~~~~~
In file included from test.c:5:
exercises.c:83:65: error: expected ‘,’ or ‘;’ before ‘)’ token
   83 |   Vector *vector = (Persona *) calloc(size_t n ,sizeof(Persona)));
      |                                                                 ^
exercises.c:83:11: error: unused variable ‘vector’ [-Werror=unused-variable]
   83 |   Vector *vector = (Persona *) calloc(size_t n ,sizeof(Persona)));
      |           ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
06ba6f5
